Update URL decoding code to be compatible with java8